syntax = "proto3";

package auction_tx;

service Auction_Tx {
  rpc SubmitTransaction(SubmitTransactionRequest)
      returns (SubmitTransactionResponse) {}
  rpc GetAuctions(GetAuctionsRequest) returns (GetAuctionsResponse) {}
}

message SubmitTransactionRequest { string transaction = 1; }
message SubmitTransactionResponse { string message = 1; }
message GetAuctionsRequest {}
message GetAuctionsResponse { string auctions = 1; }
